--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.2",
-    "prisma": "^5.0.0",
+    "@types/uuid": "^9.0.8",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "mysql2": "^3.9.7",
+    "uuid": "^9.0.1",
     "zod": "^3.22.2"
   },
   "engines": {
